backend/deploy/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api-deployment
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          image: acrfarosiansharedneu.azurecr.io/api:e384c168d351fab2d931234c42774eb56443aec6
          imagePullPolicy: Always
